2014-03-21 Roman
- !:DB.MySQL: Transaction support and using is added, for performance rise on some DB storages.
- FIX:DAQ.MMX: Crash at parameter's object open fix.


2014-03-19 Roman
- !!!!:SYS: API function "void vlSet();" expanded for same set value pass and prevent lost values.
- UI.Vision: Prevent Widgets copy or cut from self to self.
    Select area update is added for same selection change and the geometry change from the attributes inspector.


2014-03-18 Roman
- DAQ.OPC_UA: MonitoredItemId queueSize manage fix by set from 1 to 1000.
- !!!:DAQ.System: Expanded for addition properties into the parameter object support.
    UPS subtype expanded for commands and writable values support.


2014-03-17 Roman
- DAQ.OPC_UA: SubscriptionId and MonitoredItemId grow start from '1', for exclube invalid value '0'.
- SYS: AMRDevs module is added to openscada_mod.spec.
- FIX:DAQ.JavaLikeCalc: External function bind fix for return process.
- FIX:Transport.Sockets: Default symbol timeout of output transport is set from 0.01 to 0.1 for fix some unstable connection
    through VPN.
- UI.{VCAEngine,Vision,WebVision}: The primitive "Text" is moved to indexes from types.h.
- FIX:UI.Vision: New concept for selectable attribute's value obtain, for IDs set.


2014-03-14 Roman
- !:DAQ.AMRDevs: Enable build by default. Some description and translation fix.
- DAQ.OPC_UA: TranslateBrowsePathsToNodeIds is rewrote to use Browse service backend for hierarchical find path's items.
- DAQ.System: Set attributes to EVAL is expanded for separated fields.
- Transport.Sockets: Connections frequence limit disabled by problems for some usings.


2014-03-13 Roman
- FIX:Transport.Sockets: Connections frequence limit fix for ConectTimeout into miliseconds.
- FIX:DAQ.LogicLev: Reflection type is fixed and expanded for connection to target parameter update and attributes list sync
    into calc period.


2014-03-12 Roman
- DAQ.ModBus: Remove connection try from controller's object start().